--- a/module-1/lab-numpy/your-code/lab-numpy.ipynb
+++ b/module-1/lab-numpy/your-code/lab-numpy.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,20 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.20634962 0.95372492 0.12167927 0.96113709 0.7082851 ]\n",
-      "  [0.86795359 0.48947096 0.71703206 0.75743755 0.95396824]\n",
-      "  [0.59829727 0.42485552 0.8912097  0.37489913 0.88351403]]\n",
+      "[[[0.5059929  0.96234207 0.29135818 0.93129373 0.09923646]\n",
+      "  [0.91882161 0.80979227 0.35576494 0.51261907 0.21365027]\n",
+      "  [0.08451723 0.9586303  0.71160032 0.92298529 0.96094698]]\n",
       "\n",
-      " [[0.92157202 0.17865589 0.86717296 0.70433192 0.60227104]\n",
-      "  [0.85564497 0.86879059 0.41653511 0.22514706 0.40217194]\n",
-      "  [0.26057762 0.22915584 0.15863307 0.10840772 0.61883916]]]\n"
+      " [[0.88344735 0.90706979 0.33015663 0.98471268 0.02881393]\n",
+      "  [0.97152974 0.50688605 0.981655   0.86990314 0.2078938 ]\n",
+      "  [0.41048346 0.55964842 0.33277885 0.06417969 0.18998765]]]\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "False"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "        [1., 1., 1., 1., 1.]]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,22 +266,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[1.20634962, 1.95372492, 1.12167927, 1.96113709, 1.7082851 ],\n",
-       "        [1.86795359, 1.48947096, 1.71703206, 1.75743755, 1.95396824],\n",
-       "        [1.59829727, 1.42485552, 1.8912097 , 1.37489913, 1.88351403]],\n",
+       "array([[[1.5059929 , 1.96234207, 1.29135818, 1.93129373, 1.09923646],\n",
+       "        [1.91882161, 1.80979227, 1.35576494, 1.51261907, 1.21365027],\n",
+       "        [1.08451723, 1.9586303 , 1.71160032, 1.92298529, 1.96094698]],\n",
        "\n",
-       "       [[1.92157202, 1.17865589, 1.86717296, 1.70433192, 1.60227104],\n",
-       "        [1.85564497, 1.86879059, 1.41653511, 1.22514706, 1.40217194],\n",
-       "        [1.26057762, 1.22915584, 1.15863307, 1.10840772, 1.61883916]]])"
+       "       [[1.88344735, 1.90706979, 1.33015663, 1.98471268, 1.02881393],\n",
+       "        [1.97152974, 1.50688605, 1.981655  , 1.86990314, 1.2078938 ],\n",
+       "        [1.41048346, 1.55964842, 1.33277885, 1.06417969, 1.18998765]]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,27 +301,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.20634962 0.95372492 0.12167927 0.96113709 0.7082851 ]\n",
-      "  [0.86795359 0.48947096 0.71703206 0.75743755 0.95396824]\n",
-      "  [0.59829727 0.42485552 0.8912097  0.37489913 0.88351403]]\n",
+      "[[[0.5059929  0.96234207 0.29135818 0.93129373 0.09923646]\n",
+      "  [0.91882161 0.80979227 0.35576494 0.51261907 0.21365027]\n",
+      "  [0.08451723 0.9586303  0.71160032 0.92298529 0.96094698]]\n",
       "\n",
-      " [[0.92157202 0.17865589 0.86717296 0.70433192 0.60227104]\n",
-      "  [0.85564497 0.86879059 0.41653511 0.22514706 0.40217194]\n",
-      "  [0.26057762 0.22915584 0.15863307 0.10840772 0.61883916]]]\n",
-      "[[[1.20634962 1.95372492 1.12167927 1.96113709 1.7082851 ]\n",
-      "  [1.86795359 1.48947096 1.71703206 1.75743755 1.95396824]\n",
-      "  [1.59829727 1.42485552 1.8912097  1.37489913 1.88351403]]\n",
+      " [[0.88344735 0.90706979 0.33015663 0.98471268 0.02881393]\n",
+      "  [0.97152974 0.50688605 0.981655   0.86990314 0.2078938 ]\n",
+      "  [0.41048346 0.55964842 0.33277885 0.06417969 0.18998765]]]\n",
+      "[[[1.5059929  1.96234207 1.29135818 1.93129373 1.09923646]\n",
+      "  [1.91882161 1.80979227 1.35576494 1.51261907 1.21365027]\n",
+      "  [1.08451723 1.9586303  1.71160032 1.92298529 1.96094698]]\n",
       "\n",
-      " [[1.92157202 1.17865589 1.86717296 1.70433192 1.60227104]\n",
-      "  [1.85564497 1.86879059 1.41653511 1.22514706 1.40217194]\n",
-      "  [1.26057762 1.22915584 1.15863307 1.10840772 1.61883916]]]\n"
+      " [[1.88344735 1.90706979 1.33015663 1.98471268 1.02881393]\n",
+      "  [1.97152974 1.50688605 1.981655   1.86990314 1.2078938 ]\n",
+      "  [1.41048346 1.55964842 1.33277885 1.06417969 1.18998765]]]\n"
      ]
     }
    ],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,16 +387,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9854937749188714\n",
-      "0.036577059233366516\n",
-      "0.3922030892159646\n"
+      "0.9847126759839266\n",
+      "0.028813925238303617\n",
+      "0.5822899270258068\n"
      ]
     }
    ],
@@ -420,30 +420,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.06625576, 0.18283852, 0.98421985, 0.96335409, 0.69603384],\n",
-       "        [0.12815399, 0.62863313, 0.48656537, 0.09410971, 0.46115165],\n",
-       "        [0.57970303, 0.22790876, 0.03657706, 0.55297284, 0.08588952]],\n",
+       "array([[[1.5059929 , 1.96234207, 1.29135818, 1.93129373, 1.09923646],\n",
+       "        [1.91882161, 1.80979227, 1.35576494, 1.51261907, 1.21365027],\n",
+       "        [1.08451723, 1.9586303 , 1.71160032, 1.92298529, 1.96094698]],\n",
        "\n",
-       "       [[0.05070821, 0.41664302, 0.12191976, 0.40891067, 0.65792878],\n",
-       "        [0.09829063, 0.23446014, 0.12113647, 0.15105173, 0.36078087],\n",
-       "        [0.84358899, 0.32814919, 0.98549377, 0.04034422, 0.77231909]]])"
+       "       [[1.88344735, 1.90706979, 1.33015663, 1.98471268, 1.02881393],\n",
+       "        [1.97152974, 1.50688605, 1.981655  , 1.86990314, 1.2078938 ],\n",
+       "        [1.41048346, 1.55964842, 1.33277885, 1.06417969, 1.18998765]]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#your code here\n",
-    "f=np.empty((2,3,5))\n",
-    "f"
+    "d=np.empty((2,3,5))\n",
+    "d"
    ]
   },
   {
@@ -461,13 +461,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 4\n"
+     ]
+    }
+   ],
    "source": [
-    "#?????????????#\n",
     "#your code here\n",
-    "#?????????????#"
+    "for x in range(len(d)):\n",
+    "    for y in range(len(d[x])):\n",
+    "        for z in range(len(d[x][y])):\n",
+    "            if d[x][y][z] > d_min and d[x][y][z] < d_mean:\n",
+    "                    f[x][y][z]= 25\n",
+    "            elif d[x][y][z] > d_mean and d[x][y][z] < d_max:\n",
+    "                    f[x][y][z]= 75\n",
+    "            elif d[x][y][z] == d_mean:\n",
+    "                    f[x][y][z] = 50\n",
+    "            elif d[x][y][z] == d_min:\n",
+    "                    f[x][y][z] = 0\n",
+    "            elif d[x][y][z] == d_max:\n",
+    "                    f[x][y][z] = 100\n",
+    "                    \n",
+    "print(x,y,z)"
    ]
   },
   {
