--- a/module-1/lab-object-oriented-programming/your-code/main.ipynb
+++ b/module-1/lab-object-oriented-programming/your-code/main.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,9 @@
     "    # Sample Output: True\n",
     "    \n",
     "    # Your Code Here:\n",
-    "    "
+    "    if len(mat) <= 2: \n",
+    "            return True \n",
+    "    return False"
    ]
   },
   {
@@ -47,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 2,
@@ -74,27 +76,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def twodimrecursive(mat):\n",
     "    # Your code here:\n",
-    "    "
+    "    i=0\n",
+    "    for i in mat: \n",
+    "        if type(i) != list():\n",
+    "            mat.remove(i)\n",
+    "    \n",
+    "    return mat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "[[1, 2]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,12 +134,19 @@
     "    # Sample Output: (2, 3)\n",
     "    \n",
     "    # Your code here:\n",
+    "    rowcolumns_list = []\n",
+    "    rowcolumns_list.append(len(mat))\n",
+    "    columns_list = []\n",
+    "    for i in mat:\n",
+    "        columns_list.append(len(i))\n",
+    "    rowcolumns_list.append(max(columns_list))\n",
+    "    return tuple(rowcolumns_list)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +155,7 @@
        "(3, 4)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,12 +188,14 @@
     "    # Sample Output: True\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    if len(mat1) == len(mat2) and len(mat1[0]) == len(mat2[0]):\n",
+    "        return True \n",
+    "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +204,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,12 +246,15 @@
     "    # Sample Output: [[8,10,12],[14,16,18]]\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    mat1_array = np.array(mat1)\n",
+    "    mat2_array = np.array(mat2)\n",
+    "    sum_mat1_mat2 = np.add(mat1_array, mat2_array)\n",
+    "    return sum_mat1_mat2.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +263,7 @@
        "[[8, 10, 12], [14, 16, 18]]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,9 +283,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-12-f2090737e58b>, line 65)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-f2090737e58b>\"\u001b[0;36m, line \u001b[0;32m65\u001b[0m\n\u001b[0;31m    def addition(self, mat1, mat2):\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "class Matrix2D:\n",
     "    # First, we will write the __init__ function. \n",
@@ -270,7 +307,8 @@
     "        # Since the rowcolumn function is now a member of the class, make sure to refer to the function as self.rowcolumn\n",
     "        \n",
     "        # Your code here:\n",
-    "        \n",
+    "        self.mat = mat\n",
+    "        self.rowcolum = rowcolumn(self.mat)\n",
     "        \n",
     "    \n",
     "    \n",
@@ -278,7 +316,14 @@
     "    # The only change you need to make is that now we are passing self and mat to the function (make sure self is first).\n",
     "    \n",
     "    # Your code here:\n",
-    "\n",
+    "    def twodim(self, mat):\n",
+    "        for x in mat:\n",
+    "            if isinstance(x, list):\n",
+    "                for i in x:\n",
+    "                    if isinstance(i, list):\n",
+    "                        return False\n",
+    "                    else:\n",
+    "                        return True\n",
     "    \n",
     "    # Insert the rowcolumn function here.\n",
     "    # The changes you need to make: \n",
@@ -286,14 +331,27 @@
     "    # 2. Any reference to twodim will be changed to self.twodim since this function is a member of the class and takes self \n",
     "    \n",
     "    # Your code here:\n",
-    "\n",
+    "    def rowcolumn(self, mat):\n",
+    "        rowcolumns_list = []\n",
+    "        rowcolumns_list.append(len(mat))\n",
+    "        columns_list = []\n",
+    "        for i in mat:\n",
+    "            columns_list.append(len(i))\n",
+    "        rowcolumns_list.append(max(columns_list))\n",
+    "        return tuple(rowcolumns_list)\n",
     "    \n",
     "    \n",
     "    # Insert the compare function here\n",
     "    # Add self as the first argument passed to the function\n",
     "    \n",
     "    # Your code here:\n",
-    "\n",
+    "    def compare(self, mat1, mat2):\n",
+    "        size_mat1 = self.rowcolumn(mat1)\n",
+    "        size_mat2 = self.rowcolumn(mat2)\n",
+    "        if size_mat1 == size_mat2:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
     "\n",
     "    # Insert the addition function here\n",
     "    # This function now takes self and matrix (another matrix of the Matrix2D class)\n",
@@ -301,25 +359,15 @@
     "    # Change any reference to mat1 and mat2 to self.mat and matrix.mat respectively\n",
     "    # Return your result as a Matrix2D(result). This will ensure that we return a new matrix and not a list of lists.\n",
     "    \n",
-    "    # Your code here:\n"
+    "    # Your code here:\n",
+    "    def addition(self, mat1, mat2):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[8, 10, 12], [14, 16, 18]]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Matrix2D([[1,2,3],[4,5,6]]).addition(Matrix2D([[7,8,9],[10,11,12]])).mat"
    ]
@@ -341,9 +389,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-18-14591fc7f940>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-14591fc7f940>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def transpose(mat):\n",
     "    # This function takes a list of lists and returns a transposed list of lists.\n",
@@ -359,18 +416,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[1, 4], [2, 5], [3, 6]]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'transpose' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-7fb8b645f586>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'transpose' is not defined"
+     ]
     }
    ],
    "source": [
@@ -401,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
