Starting the Lab in Exercise 3

--- a/module-2/lab-probability-intro/your-code/main.ipynb
+++ b/module-2/lab-probability-intro/your-code/main.ipynb
@@ -70,13 +70,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
-    "your solution here\n",
-    "\"\"\""
+    "We know that 50% of the rainy days are cloudy, \n",
+    "so if only 10% of the days this month could rain, \n",
+    "it's easy, we have a 5% chance of rain.\n",
+    "\"\"\"\n",
+    "print(0.5 * 0.1 * 100)"
    ]
   },
   {
@@ -137,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
