Lab finished with Challenges 1,2 and 3 done

--- a/module-2/lab-probability-intro/your-code/main.ipynb
+++ b/module-2/lab-probability-intro/your-code/main.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "your solution here\n",
+    "This 𝑃(𝐴∪𝐵)=0.6 is False, should be 0,9\n",
     "\"\"\""
    ]
   },
@@ -49,7 +49,11 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "your solution here\n",
+    "We have a total of 30 balls:\n",
+    "1º -------------->>> You have a 10/30 chance.\n",
+    "2º -------------->>> You have a 10/29 chance.\n",
+    "3º -------------->>> You have a 10/28 chance.\n",
+    "4º -------------->>> You have a 10/29 chance.\n",
     "\"\"\""
    ]
   },
