--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -12,13 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import numpy and pandas\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "from scipy.stats import ttest_1samp"
    ]
   },
   {
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +168,7 @@
        "4            NaN        19.86  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,11 +187,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 75,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name                     0\n",
+       "Job Titles               0\n",
+       "Department               0\n",
+       "Full or Part-Time        0\n",
+       "Salary or Hourly         0\n",
+       "Typical Hours        25161\n",
+       "Annual Salary         8022\n",
+       "Hourly Rate          25161\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries.isnull().sum()"
    ]
   },
   {
@@ -201,12 +225,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Salary    25161\n",
+       "Hourly     8022\n",
+       "Name: Salary or Hourly, dtype: int64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "salaries['Salary or Hourly'].value_counts()"
    ]
   },
   {
@@ -225,11 +262,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "POLICE                   13414\n",
+       "FIRE                      4641\n",
+       "STREETS & SAN             2198\n",
+       "OEMC                      2102\n",
+       "WATER MGMNT               1879\n",
+       "AVIATION                  1629\n",
+       "TRANSPORTN                1140\n",
+       "PUBLIC LIBRARY            1015\n",
+       "GENERAL SERVICES           980\n",
+       "FAMILY & SUPPORT           615\n",
+       "FINANCE                    560\n",
+       "HEALTH                     488\n",
+       "CITY COUNCIL               411\n",
+       "LAW                        407\n",
+       "BUILDINGS                  269\n",
+       "COMMUNITY DEVELOPMENT      207\n",
+       "BUSINESS AFFAIRS           171\n",
+       "COPA                       116\n",
+       "BOARD OF ELECTION          107\n",
+       "DoIT                        99\n",
+       "PROCUREMENT                 92\n",
+       "INSPECTOR GEN               87\n",
+       "MAYOR'S OFFICE              85\n",
+       "CITY CLERK                  84\n",
+       "ANIMAL CONTRL               81\n",
+       "HUMAN RESOURCES             79\n",
+       "CULTURAL AFFAIRS            65\n",
+       "BUDGET & MGMT               46\n",
+       "ADMIN HEARNG                39\n",
+       "DISABILITIES                28\n",
+       "TREASURER                   22\n",
+       "HUMAN RELATIONS             16\n",
+       "BOARD OF ETHICS              8\n",
+       "POLICE BOARD                 2\n",
+       "LICENSE APPL COMM            1\n",
+       "Name: Department, dtype: int64"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries['Department'].value_counts()"
    ]
   },
   {
@@ -243,11 +327,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The t value of this hypothesis test equals to 20.6198057854942 and the p value equals to 4.3230240486229894e-92\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "hourly_workers = salaries['Hourly Rate'].dropna()\n",
+    "test30 = ttest_1samp(hourly_workers, 30)\n",
+    "print(f'The t value of this hypothesis test equals to {test30.statistic} and the p value equals to {test30.pvalue}')"
    ]
   },
   {
@@ -261,11 +356,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The T-Value is 5.932870515690814\n",
+      "The P-Value is 1.507879259958193e-09\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "Annual_salary = salaries['Annual Salary'].dropna()\n",
+    "test_86k = ttest_1samp(Annual_salary, 86000)\n",
+    "statistic_value = test_86k.statistic\n",
+    "pvalue = test_86k.pvalue/2\n",
+    "\n",
+    "print(f'The T-Value is {statistic_value}')\n",
+    "print(f'The P-Value is {pvalue}')"
    ]
   },
   {
@@ -277,11 +388,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Department\n",
+       "STREETS & SAN    1862\n",
+       "Name: Hourly, dtype: int64"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "crosstab_function = pd.crosstab(salaries['Department'], salaries['Salary or Hourly'])\n",
+    "crosstab_function.head()\n",
+    "most_hourly_workers = crosstab_function['Hourly'].sort_values(ascending=False)\n",
+    "most_hourly_workers.head(1)"
    ]
   },
   {
