Exercises 1, 2 and 3 done

--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -31,11 +31,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "p_Bag1 = 1/2\n",
+    "p_Vanilla_Bag1 = 3/4\n",
+    "p_Vanilla = 5/8\n",
+    "\n",
+    "pp_Bag1_Vanilla = (p_Bag1*p_Vanilla_Bag1)/p_Vanilla\n",
+    "\n",
+    "pp_Bag1_Vanilla"
    ]
   },
   {
@@ -47,10 +64,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_Bag2 = 1/2\n",
+    "p_Vanilla_Bag2 = 2/4\n",
+    "p_Vanilla = 5/8\n",
+    "\n",
+    "pp_Bag2_Vanilla = (p_Bag1*p_Vanilla_Bag2)/p_Vanilla\n",
+    "\n",
+    "pp_Bag2_Vanilla"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,10 +97,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_Bag1 = 1/2\n",
+    "p_choco_Bag1 = 1/4\n",
+    "p_choco = 3/8\n",
+    "\n",
+    "pp_Bag1_choco = (p_Bag1*p_choco_Bag1)/p_choco\n",
+    "\n",
+    "pp_Bag1_choco"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6666666666666666"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_Bag2 = 1/2\n",
+    "p_choco_Bag2 = 2/4\n",
+    "p_choco = 3/8\n",
+    "\n",
+    "pp_Bag2_choco = (p_Bag1*p_choco_Bag2)/p_choco\n",
+    "\n",
+    "pp_Bag2_choco"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,10 +178,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.29411764705882354"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#There's two bags, so there's a 1/2 chance it comes out of one of the two bags.\n",
+    "#There are 34% yellow balls.\n",
+    "#In the bag1 there are 20% yellow balls.\n",
+    "\n",
+    "p_Bag1 = 1/2\n",
+    "p_yellow_B1 = 0.20\n",
+    "p_yellow = 0.34\n",
+    "\n",
+    "pp_Bag1_yellow = (p_B1*p_yellow_B1)/p_y\n",
+    "\n",
+    "pp_Bag1_yellow"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,10 +215,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2058823529411765"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#There's two bags, so there's a 1/2 chance it comes out of one of the two bags.\n",
+    "#There are 34% yellow balls.\n",
+    "#In the Bag2 there are 14% yellow balls.\n",
+    "\n",
+    "p_Bag2 = 1/2\n",
+    "p_yellow_Bag2 = 0.14\n",
+    "p_yellow = 0.34\n",
+    "\n",
+    "pp_Bag2_yellow = (p_Bag1*p_yellow_Bag1)/p_yellow\n",
+    "\n",
+    "pp_Bag2_yellow"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,10 +252,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.16666666666666669"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#There's two bags, so there's a 1/2 chance it comes out of one of the two bags.\n",
+    "#There are 30% green balls.\n",
+    "#In the Bag1 there are 10% grenn balls.\n",
+    "\n",
+    "p_Bag1 = 1/2\n",
+    "p_green_Bag1 = 0.10\n",
+    "p_green = 0.30\n",
+    "\n",
+    "pp_Bag1_green = (p_Bag1*p_green_Bag1)/p_green\n",
+    "\n",
+    "pp_Bag1_green"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.33333333333333337"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#There's two bags, so there's a 1/2 chance it comes out of one of the two bags.\n",
+    "#There are 30% green balls.\n",
+    "#In the Bag1 there are 20% grenn balls.\n",
+    "\n",
+    "p_Bag2 = 1/2\n",
+    "p_green_Bag2 = 0.20\n",
+    "p_green = 0.30\n",
+    "\n",
+    "pp_Bag2_green = (p_Bag1*p_green_Bag2)/p_green\n",
+    "\n",
+    "pp_Bag2_green"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,7 +326,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# If you choose to change doors and take door C, now the odds are 66% versus 33% you had initially."
+   ]
   },
   {
    "cell_type": "markdown",
