All the labs done

--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,51 +64,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['brownie mix', 'broccoli']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fruits = ['Bananas', 'Chocolate', 'Bread', 'diapers', 'Ice cream', 'brownie mix', 'broccoli']\n",
-    "\n",
-    "fruit = [fruit.lower() for fruit in fruits if fruit.startswith('b')]\n",
-    "\n",
-    "\n",
-    "fruit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Durante un tiempo no estuvo segura de si su marido era su marido.\n"
+      "Grocery list: bananas, bread, brownie, broccoli.\n"
      ]
     }
    ],
    "source": [
-    "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n",
-    "#I create \"sep = ' ' for create a space between 2 words.\n",
-    "separate = ' '\n",
-    "#Now I create a new list and join the sep \" \" to str_list. This change de . (dots) for a \" \" (empty space).\n",
-    "new_str_list = separate.join(str_list)\n",
-    "#Now I do print and + a dot for final print\n",
-    "print(new_str_list + \".\")"
+    "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
+    "\n",
+    "#First step is to turn the food_list into a string using the join function.\n",
+    "string_food_list = ' '.join(food_list).lower() + '.'\n",
+    "#Here I use REGEX to find all words that begin with \"b\".\n",
+    "grocery_list = re.findall('b\\w+\\S', string_food_list)\n",
+    "\n",
+    "print(f'Grocery list: {\", \".join(grocery_list)}')"
    ]
   },
   {
@@ -168,20 +143,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-2-b73c4fd339e1>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-b73c4fd339e1>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    poem = 'Some say the world will end in fire,\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire,': 1, 'ice.': 1, 'From': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'I': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'fire.': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice,': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'ice': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice.': 1}\n"
      ]
     }
    ],
    "source": [
-    "poem = Some say the world will end in fire,\n",
+    "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
     "From what I’ve tasted of desire\n",
     "I hold with those who favor fire.\n",
@@ -189,14 +163,19 @@
     "I think I know enough of hate\n",
     "To say that for destruction ice\n",
     "Is also great\n",
-    "And would suffice.\n",
+    "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n",
+    "# Here I created a dictionary:\n",
+    "dictionary = {}\n",
     "\n",
-    "#new_poem = \"\".join(poem.split(\".\"))\n",
-    "new_poem = poem.split(' ')\n",
-    "\n",
-    "new_poem"
+    "# Then with a for loop running each word of the poem we are able to count how many times a word appears in that poem.\n",
+    "for word in poem.split():\n",
+    "    if word in dictionary:\n",
+    "        dictionary[word]+=1\n",
+    "    else:\n",
+    "        dictionary[word]=1\n",
+    "        \n",
+    "print(dictionary)"
    ]
   },
   {
@@ -208,22 +187,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-5ecb317a73e5>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-5ecb317a73e5>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    poem = I was angry with my friend;\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i was angry with my friend i told my wrath my wrath did end i was angry with my foe i told not my wrath did grow i waterd fears night  morning with my tears i sunned with smiles with soft deceitful wiles grew both day night till bore apple bright my foe beheld shine he knew that it was mine into my garden stole when night had veild pole in morning glad i see my foe outstretched beneath the tree\n"
      ]
     }
    ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
-    "poem = I was angry with my friend; \n",
+    "poem = \"\"\"I was angry with my friend; \n",
     "I told my wrath, my wrath did end.\n",
     "I was angry with my foe: \n",
     "I told it not, my wrath did grow. \n",
@@ -241,13 +219,23 @@
     "And into my garden stole, \n",
     "When the night had veild the pole; \n",
     "In the morning glad I see; \n",
-    "My foe outstretched beneath the tree.\n",
+    "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
     "# Your code here:\n",
-    "poem = [poem.lower() for words in poem]\n",
+    "# First we turn the poem into a list using split function.\n",
+    "poem_list = poem.lower().split()\n",
+    " \n",
+    "# If any word of the list equals to any word of the blacklist, we delete it.\n",
+    "for word in poem_list:\n",
+    "    if word in blacklist:\n",
+    "        poem_list.remove(word)\n",
     "\n",
-    "print(poem)\n",
-    "\n"
+    "# Convert poem_list back into a string \n",
+    "# so we can use re.sub to remove all non letter characters.\n",
+    "poem_string = ' '.join(poem_list)\n",
+    "\n",
+    "ps = re.sub(r'[^\\w\\s]', '', poem_string)\n",
+    "print(ps)"
    ]
   },
   {
@@ -261,23 +249,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "THE APPARITION OF THESE FACES IN THE CROWD; PETALS ON A WET, BLACK BOUGH.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['T', 'P']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "poem = 'The apparition of these faces in the crowd; Petals on a wet, black bough.'\n",
     "\n",
     "# Your code here:\n",
-    "#with .upper() i can convert all in uppercase\n",
-    "print (poem.upper())"
+    "# Your code here:\n",
+    "re.findall('[A-Z]',poem)"
    ]
   },
   {
@@ -289,15 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-8b6e7a9df7d8>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-8b6e7a9df7d8>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    data2= re.search('['0-9']', 'data')\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
      ]
     }
    ],
@@ -306,10 +296,11 @@
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
     "# Your code here:\n",
+    "r = re.compile('[0-9]')\n",
     "\n",
-    "data2= re.search('['0-9']', 'data')\n",
+    "new_data = list(filter(r.search, data))\n",
     "\n",
-    "print(data2) #not works!"
+    "print(new_data)"
    ]
   },
   {
@@ -325,65 +316,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "expected string or bytes-like object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-8cd97c88f70f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'123abc'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'abc123'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'JohnSmith1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'ABBY4'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'JANE'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# Your code here:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'[0-9]'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/miniconda3/envs/jupyter_env/lib/python3.7/re.py\u001b[0m in \u001b[0;36msearch\u001b[0;34m(pattern, string, flags)\u001b[0m\n\u001b[1;32m    181\u001b[0m     \"\"\"Scan through string looking for a match to the pattern, returning\n\u001b[1;32m    182\u001b[0m     a Match object, or None if no match was found.\"\"\"\n\u001b[0;32m--> 183\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_compile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    184\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    185\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrepl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected string or bytes-like object"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1']\n"
      ]
     }
    ],
    "source": [
     "import re\n",
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "\n",
     "# Your code here:\n",
-    "print(re.search('[0-9]', data))"
+    "r = re.compile('[a-z]\\w')\n",
+    "one_data = list(filter(r.search, data))\n",
+    "\n",
+    "print(one_data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# My test of code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jupyter_env] *",
+   "display_name": "ironhack_env",
    "language": "python",
-   "name": "conda-env-jupyter_env-py"
+   "name": "ironhack_env"
   },
   "language_info": {
    "codemirror_mode": {
