--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,13 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "corpus = []\n",
     "\n",
-    "# Write your code here\n"
+    "# Write your code here\n",
+    "\n",
+    "for i in docs:\n",
+    "    file = open(i, 'r')\n",
+    "    corpus.append(file.read())"
    ]
   },
   {
@@ -106,9 +110,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus)"
    ]
@@ -136,11 +148,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "new_corpus = ' '.join(corpus)\n",
+    "\n",
+    "np = new_corpus.lower()\n",
+    "corpus = re.sub(r'[^\\w\\s]', '', np)\n",
+    "\n",
+    "new_corpus = []\n",
+    "for i in docs:\n",
+    "    file = open(i, 'r')\n",
+    "    read_files = file.read().lower()\n",
+    "    final_doc = re.sub(r'[^\\w\\s]','',read_files)\n",
+    "    new_corpus.append(final_doc)\n",
+    "    \n",
+    "print(new_corpus)"
    ]
   },
   {
@@ -152,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +208,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here"
+    "for word in corpus.split():\n",
+    "    if word not in bag_of_words:\n",
+    "        bag_of_words.append(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_corpus)"
    ]
   },
   {
@@ -208,13 +263,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "term_freq = []\n",
+    "#write your code here\n",
     "\n",
-    "# Write your code here"
+    "for i in new_corpus:\n",
+    "    lst = []\n",
+    "    a = i.split()\n",
+    "    for term in bag_of_words:\n",
+    "        if term in a:\n",
+    "            lst.append(1)\n",
+    "        else:\n",
+    "            lst.append(0)\n",
+    "    term_freq.append(lst)"
    ]
   },
   {
@@ -228,9 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 0, 0, 1, 1, 0, 0, 0, 0], [1, 0, 0, 1, 0, 1, 1, 1, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(term_freq)"
    ]
@@ -278,13 +350,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'cool', 'love', 'student']\n"
+     ]
+    }
+   ],
    "source": [
     "stop_words = ['all', 'six', 'less', 'being', 'indeed', 'over', 'move', 'anyway', 'fifty', 'four', 'not', 'own', 'through', 'yourselves', 'go', 'where', 'mill', 'only', 'find', 'before', 'one', 'whose', 'system', 'how', 'somewhere', 'with', 'thick', 'show', 'had', 'enough', 'should', 'to', 'must', 'whom', 'seeming', 'under', 'ours', 'has', 'might', 'thereafter', 'latterly', 'do', 'them', 'his', 'around', 'than', 'get', 'very', 'de', 'none', 'cannot', 'every', 'whether', 'they', 'front', 'during', 'thus', 'now', 'him', 'nor', 'name', 'several', 'hereafter', 'always', 'who', 'cry', 'whither', 'this', 'someone', 'either', 'each', 'become', 'thereupon', 'sometime', 'side', 'two', 'therein', 'twelve', 'because', 'often', 'ten', 'our', 'eg', 'some', 'back', 'up', 'namely', 'towards', 'are', 'further', 'beyond', 'ourselves', 'yet', 'out', 'even', 'will', 'what', 'still', 'for', 'bottom', 'mine', 'since', 'please', 'forty', 'per', 'its', 'everything', 'behind', 'un', 'above', 'between', 'it', 'neither', 'seemed', 'ever', 'across', 'she', 'somehow', 'be', 'we', 'full', 'never', 'sixty', 'however', 'here', 'otherwise', 'were', 'whereupon', 'nowhere', 'although', 'found', 'alone', 're', 'along', 'fifteen', 'by', 'both', 'about', 'last', 'would', 'anything', 'via', 'many', 'could', 'thence', 'put', 'against', 'keep', 'etc', 'amount', 'became', 'ltd', 'hence', 'onto', 'or', 'con', 'among', 'already', 'co', 'afterwards', 'formerly', 'within', 'seems', 'into', 'others', 'while', 'whatever', 'except', 'down', 'hers', 'everyone', 'done', 'least', 'another', 'whoever', 'moreover', 'couldnt', 'throughout', 'anyhow', 'yourself', 'three', 'from', 'her', 'few', 'together', 'top', 'there', 'due', 'been', 'next', 'anyone', 'eleven', 'much', 'call', 'therefore', 'interest', 'then', 'thru', 'themselves', 'hundred', 'was', 'sincere', 'empty', 'more', 'himself', 'elsewhere', 'mostly', 'on', 'fire', 'am', 'becoming', 'hereby', 'amongst', 'else', 'part', 'everywhere', 'too', 'herself', 'former', 'those', 'he', 'me', 'myself', 'made', 'twenty', 'these', 'bill', 'cant', 'us', 'until', 'besides', 'nevertheless', 'below', 'anywhere', 'nine', 'can', 'of', 'your', 'toward', 'my', 'something', 'and', 'whereafter', 'whenever', 'give', 'almost', 'wherever', 'is', 'describe', 'beforehand', 'herein', 'an', 'as', 'itself', 'at', 'have', 'in', 'seem', 'whence', 'ie', 'any', 'fill', 'again', 'hasnt', 'inc', 'thereby', 'thin', 'no', 'perhaps', 'latter', 'meanwhile', 'when', 'detail', 'same', 'wherein', 'beside', 'also', 'that', 'other', 'take', 'which', 'becomes', 'you', 'if', 'nobody', 'see', 'though', 'may', 'after', 'upon', 'most', 'hereupon', 'eight', 'but', 'serious', 'nothing', 'such', 'why', 'a', 'off', 'whereby', 'third', 'i', 'whole', 'noone', 'sometimes', 'well', 'amoungst', 'yours', 'their', 'rather', 'without', 'so', 'five', 'the', 'first', 'whereas', 'once']\n",
     "\n",
-    "# Write your code below\n"
+    "# Write your code below\n",
+    "\n",
+    "for word_b in bag_of_words:\n",
+    "    if word_b in stop_words:\n",
+    "        bag_of_words.remove(word_b)\n",
+    "\n",
+    "print(bag_of_words)\n"
    ]
   },
   {
@@ -314,6 +400,35 @@
     " [0 0 0 1 0 1 0]\n",
     " [1 1 0 1 0 0 1]]\n",
     " ```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting sklearn\n",
+      "  Downloading sklearn-0.0.tar.gz (1.1 kB)\n",
+      "Requirement already satisfied: scikit-learn in /Users/borjauria/miniconda3/envs/ironhack_env/lib/python3.7/site-packages (from sklearn) (0.22.2)\n",
+      "Requirement already satisfied: scipy>=0.17.0 in /Users/borjauria/miniconda3/envs/ironhack_env/lib/python3.7/site-packages (from scikit-learn->sklearn) (1.3.1)\n",
+      "Requirement already satisfied: numpy>=1.11.0 in /Users/borjauria/miniconda3/envs/ironhack_env/lib/python3.7/site-packages (from scikit-learn->sklearn) (1.17.3)\n",
+      "Requirement already satisfied: joblib>=0.11 in /Users/borjauria/miniconda3/envs/ironhack_env/lib/python3.7/site-packages (from scikit-learn->sklearn) (0.14.0)\n",
+      "Building wheels for collected packages: sklearn\n",
+      "  Building wheel for sklearn (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for sklearn: filename=sklearn-0.0-py2.py3-none-any.whl size=1316 sha256=7e6ca9e38c2c776b162b736c25bd9b76d292c9c90a0a6e0345d52f683136a5da\n",
+      "  Stored in directory: /Users/borjauria/Library/Caches/pip/wheels/46/ef/c3/157e41f5ee1372d1be90b09f74f82b10e391eaacca8f22d33e\n",
+      "Successfully built sklearn\n",
+      "Installing collected packages: sklearn\n",
+      "Successfully installed sklearn-0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install sklearn"
    ]
   }
  ],
